--- a/templates/partials/modern_user_menu.html
+++ b/templates/partials/modern_user_menu.html
@@ -1,8 +1,8 @@
 {# هذا الملف يمثل قائمة المستخدم (الدروب داون) في ملف layouts/base.html - تصميم أتلانتس المحسن #}
 
 <div class="user-menu dropdown">
-    <button class="user-menu-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        <i class="fas fa-user-circle fa-2x"></i>
+    <button class="user-menu-toggle btn btn-link" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="text-decoration: none; color: #1e293b; transition: all 0.2s;">
+        <i class="fas fa-user-circle fa-2x" style="transition: transform 0.2s;"></i>
     </button>
     <ul class="dropdown-menu dropdown-menu-end text-end" dir="rtl">
         <li>
